Setup part of the flow for creating and editing an event.
Changed Event to have a reference to the PlayerCharacter in addition to just setting the ObjectId of the PlayerCharacter.

Moved the create button for event from in the list fragment into the layouts for the character activity as it isn't related to the list's functionality.

Created a very basic/initial layout for fragment_event_upsert layout.

Added states for the icon for adding an event.

Styling tweaks.

--- a/app/src/main/res/drawable-xxhdpi/ic_list_white_24dp_states.xml
+++ b/app/src/main/res/drawable-xxhdpi/ic_list_white_24dp_states.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- ic_list_white_24dp_states.xml
+    Purpose: Version of ic_list_white_24dp with different states.
+
+    Drew Matheson, 2015.11.30: Created
+-->
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_pressed="true"
