--- a/app/src/main/res/layout/character_list_item.xml
+++ b/app/src/main/res/layout/character_list_item.xml
@@ -8,14 +8,14 @@
 
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/activityLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:paddingLeft="?android:attr/listPreferredItemPaddingLeft"
-    android:paddingStart="?android:attr/listPreferredItemPaddingLeft"
+    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingRight="?android:attr/listPreferredItemPaddingRight"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingRight"
+    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:descendantFocusability="blocksDescendants"
     android:background="@drawable/list_item_background" >
 
@@ -51,7 +51,7 @@
         android:gravity="center_vertical"
         android:textColor="@color/primary_text_default_material_dark"
         android:ellipsize="end"
-        android:lines="1"
+        android:singleLine="true"
         android:layout_toLeftOf="@id/view_events_button"
         android:layout_toStartOf="@id/view_events_button"
         android:layout_alignTop="@id/view_events_button"
@@ -68,7 +68,11 @@
         android:textColor="@color/secondary_text_default_material_dark"
         android:layout_alignLeft="@id/character_name"
         android:layout_alignStart="@id/character_name"
-        android:paddingLeft="5dp"
+        android:layout_alignRight="@id/view_events_button"
+        android:textSize="12sp"
+        android:layout_marginLeft="4dp"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:paddingRight="5dp"
         android:layout_below="@id/character_name"
         android:text="Placeholder Race Class" />
