--- a/app/src/main/res/layout/fragment_character_detail.xml
+++ b/app/src/main/res/layout/fragment_character_detail.xml
@@ -92,7 +92,7 @@
         android:layout_alignParentBottom="true">
         <Button
             android:id="@+id/delete_character_button"
-            android:text="@string/delete_character"
+            android:text="@string/delete"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
