--- a/app/src/main/res/layout/event_onepane.xml
+++ b/app/src/main/res/layout/event_onepane.xml
@@ -6,12 +6,38 @@
     Drew Matheson, 2015.11.17: Created
 -->
 
-<fragment
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/event_list"
-    android:name="ca.secondlifestory.activities.event.EventListFragment"
+    style="@style/activityLayout"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventActivity"
-    tools:layout="@android:layout/list_content" />
+    tools:context="ca.secondlifestory.activities.event.EventActivity" >
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        <TextView
+            android:id="@+id/character_name"
+            style="@style/pageHeader.eventListCharacterName"
+            android:text="Placeholder Character Name" />
+
+        <ImageButton
+            android:id="@+id/add_event_button"
+            android:src="@drawable/ic_playerlist_add_white_36dp_states"
+            style="@style/eventListAddEventButton"
+            android:layout_alignParentTop="true"
+            android:layout_alignBottom="@id/character_name"
+            android:paddingRight="6dp"
+            android:paddingLeft="6dp"/>
+    </RelativeLayout>
+
+    <fragment
+        android:id="@+id/event_list"
+        android:name="ca.secondlifestory.activities.event.EventListFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout="@android:layout/list_content" />
+
+</LinearLayout>
