--- a/app/src/main/res/layout/event_twopane.xml
+++ b/app/src/main/res/layout/event_twopane.xml
@@ -9,10 +9,9 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/activityLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="horizontal"
@@ -24,13 +23,25 @@
     master/detail flow.
     -->
 
-    <fragment
-        android:id="@+id/event_list"
-        android:name="ca.secondlifestory.activities.event.EventListFragment"
+    <RelativeLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        tools:layout="@android:layout/list_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+        <ImageButton
+            android:id="@+id/add_event_button"
+            android:src="@drawable/ic_playerlist_add_white_36dp_states"
+            android:layout_width="match_parent"
+            style="@style/eventListAddEventButton"/>
+
+        <fragment
+            android:id="@+id/event_list"
+            android:name="ca.secondlifestory.activities.event.EventListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/add_event_button"
+            tools:layout="@android:layout/list_content" />
+    </RelativeLayout>
 
     <fragment
         android:id="@+id/event_detail"
@@ -38,6 +49,6 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3"
-        tools:layout="@android:layout/list_content" />
+        tools:layout="@layout/fragment_event_detail" />
 
 </LinearLayout>
