Styling & Event work.
Added Date formatting for Event list and details.
Hooked up the Event Upsert Cancel button.
Changed colors for the button backgrounds
Add a secondary button background.
Removed the text view for the character name above the event lists.
Added scrollview for event details' description field.
Added a colors file containing primary and accent colors.
Fixed the base app theme for the app missing the "Base." prefix.

--- a/app/src/main/res/drawable/button_secondary_background_roundedcorner.xml
+++ b/app/src/main/res/drawable/button_secondary_background_roundedcorner.xml
@@ -11,7 +11,7 @@
         android:state_pressed="true"
         android:state_enabled="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
-            <solid android:color="@color/dark_indigo"/>
+            <solid android:color="@color/accent_dark"/>
             <corners android:radius="6dp"/>
         </shape>
     </item>
@@ -20,7 +20,7 @@
         android:state_enabled="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-            <solid android:color="@color/primary_indigo"/>
+            <solid android:color="@color/accent"/>
             <corners android:radius="6dp"/>
         </shape>
     </item>
