--- a/app/src/main/res/layout/event_onepane.xml
+++ b/app/src/main/res/layout/event_onepane.xml
@@ -15,23 +15,14 @@
     android:layout_height="match_parent"
     tools:context="ca.secondlifestory.activities.event.EventActivity" >
 
-    <RelativeLayout
+    <ImageButton
+        android:id="@+id/add_event_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        <TextView
-            android:id="@+id/character_name"
-            style="@style/pageHeader.eventListCharacterName"
-            android:text="Placeholder Character Name" />
-
-        <ImageButton
-            android:id="@+id/add_event_button"
-            android:src="@drawable/ic_playerlist_add_white_36dp_states"
-            style="@style/eventListAddEventButton"
-            android:layout_alignParentTop="true"
-            android:layout_alignBottom="@id/character_name"
-            android:paddingRight="6dp"
-            android:paddingLeft="6dp"/>
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_playerlist_add_white_36dp_states"
+        android:contentDescription="@string/add_event"
+        style="@style/eventListAddEventButton"
+        android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
     <fragment
         android:id="@+id/event_list"
