--- a/app/src/main/res/layout/activity_customize.xml
+++ b/app/src/main/res/layout/activity_customize.xml
@@ -12,7 +12,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/activityLayout"
     tools:context="ca.secondlifestory.activities.CustomizeActivity"
-    android:orientation="vertical" >
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/character_name"
