Added footer controls on list fragments

--- a/app/src/main/res/layout/character_onepane.xml
+++ b/app/src/main/res/layout/character_onepane.xml
@@ -6,11 +6,10 @@
     Drew Matheson, 2015.11.17: Created
 -->
 
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/activityLayout"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ca.secondlifestory.activities.character.CharacterActivity" >
@@ -23,12 +22,21 @@
         android:background="@drawable/button_background_roundedcorner"
         android:src="@drawable/ic_add_circle_outline_white_36dp_states"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        />
+        android:layout_alignParentTop="true" />
+
+    <CheckBox
+        android:id="@+id/filter_show_deceased"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show Deceased"
+        android:layout_alignParentBottom="true" />
 
     <fragment
         android:id="@+id/character_list"
         android:name="ca.secondlifestory.activities.character.CharacterListFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_character_list" />
-</LinearLayout>
+        android:layout_height="fill_parent"
+        tools:layout="@layout/fragment_character_list"
+        android:layout_above="@id/filter_show_deceased"
+        android:layout_below="@id/create_character_button" />
+</RelativeLayout>
