--- a/app/src/main/res/layout/event_twopane.xml
+++ b/app/src/main/res/layout/event_twopane.xml
@@ -37,12 +37,20 @@
             style="@style/eventListAddEventButton"
             android:layout_marginBottom="@dimen/activity_vertical_margin" />
 
+        <Button
+            android:id="@+id/death_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Died"
+            android:layout_alignParentBottom="true"/>
+
         <fragment
             android:id="@+id/event_list"
             android:name="ca.secondlifestory.activities.event.EventListFragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="fill_parent"
             android:layout_below="@id/add_event_button"
+            android:layout_above="@id/death_button"
             tools:layout="@android:layout/list_content" />
     </RelativeLayout>
 
