--- a/app/src/main/res/layout-land/activity_customize.xml
+++ b/app/src/main/res/layout-land/activity_customize.xml
@@ -11,7 +11,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/activityLayout"
     tools:context="ca.secondlifestory.activities.CustomizeActivity"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:baselineAligned="false">
 
     <LinearLayout
         android:layout_width="0dp"
