--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/login_logo"
         android:layout_centerHorizontal="true"
-        android:paddingTop="2sp"
-        android:textAlignment="center"/>
+        android:paddingTop="2sp" />
 
 </RelativeLayout>
