--- a/app/src/main/res/layout/character_twopane.xml
+++ b/app/src/main/res/layout/character_twopane.xml
@@ -29,7 +29,7 @@
             android:id="@+id/create_character_button"
             android:layout_width="fill_parent"
             android:layout_height="36dp"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:background="@drawable/button_background_roundedcorner"
             android:src="@drawable/ic_add_circle_outline_white_36dp_states"
             android:layout_marginBottom="@dimen/activity_vertical_margin"
