--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -40,10 +40,11 @@
         android:layout_alignStart="@id/event_listitem_name"
         android:textSize="12sp"
         android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
         android:singleLine="true"
         android:ellipsize="end"
-        android:paddingRight="5dp"
-        android:layout_below="@id/event_listitem_name"
-        android:text="Placeholder Date" />
+        android:paddingRight="4dp"
+        android:paddingEnd="4dp"
+        android:layout_below="@id/event_listitem_name" />
 
 </RelativeLayout>
