--- a/app/src/main/res/layout/fragment_character_upsert.xml
+++ b/app/src/main/res/layout/fragment_character_upsert.xml
@@ -14,6 +14,15 @@
     android:layout_height="match_parent"
     tools:context="ca.secondlifestory.activities.character.CharacterUpsertFragment">
 
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/loadingIndicator"
+        android:progressDrawable="@drawable/loading_spinning_indicator"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
+
     <TextView
         android:id="@+id/upsert_title"
         android:layout_width="match_parent"
