--- a/app/src/main/res/layout/fragment_event_upsert.xml
+++ b/app/src/main/res/layout/fragment_event_upsert.xml
@@ -7,12 +7,21 @@
 -->
 
 <RelativeLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-style="@style/fragmentLayout"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context="ca.secondlifestory.activities.event.EventUpsertFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/fragmentLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="ca.secondlifestory.activities.event.EventUpsertFragment">
+
+    <ProgressBar
+        style="?android:attr/progressBarStyle"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:id="@+id/loadingIndicator"
+        android:progressDrawable="@drawable/loading_spinning_indicator"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/upsert_title"
